--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,63 +45,37 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:logo="@drawable/icon"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".activities.MainActivity"
-            android:label="" >
-        </activity>
+        android:theme="@style/AppTheme">
+
         <activity
             android:name=".activities.SplashActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name=".common.GCMBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-
-                <category android:name="com.appiaries.todo" />
-            </intent-filter>
-        </receiver>
-
-        <service android:name=".GCMIntentService" >
-        </service>
-
-        <activity
-            android:name="com.appiaries.AppiariesDialogActivty"
-            android:excludeFromRecents="true"
-            android:noHistory="true"
-            android:theme="@android:style/Theme.Wallpaper.NoTitleBar" >
-        </activity>
-
         <!-- Google API Key -->
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBF0WlPrhR-_aRQkFJ9MH9_WCFvrfVZgkQ" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".activities.DailyListActivity"
+            android:name=".activities.TaskListActivity"
             android:launchMode="standard"
-            android:label="@string/title_activity_daily_list" >
-             
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name=".activities.AddTaskActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
             android:name="com.appiaries.todo.activities.EditTaskActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
             android:name="com.appiaries.todo.activities.LoginActivity"
@@ -112,11 +86,11 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.appiaries.todo.activities.Menu1Activity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.appiaries.todo.activities.AccountActivity"
+            android:name=".activities.AccountSettingActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
@@ -125,17 +99,19 @@
             android:launchMode="standard" >
         </activity>
         <activity
-            android:name="com.facebook.LoginActivity"
-            android:label="@string/title_facebook_login" >
-        </activity>
-        <activity
             android:name="com.appiaries.todo.activities.ErrorActivity"
             android:label="@string/app_name" >
         </activity>
 
+        <!-- Required if use AB.FacebookService -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:value="@string/facebook__app_id" />
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/facebook__title" >
+        </activity>
+
     </application>
 
 </manifest>
