--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=libs\\google-play-services_lib
-android.library.reference.2=libs\\pull-to-refresh
+android.library.reference.1=libs/google-play-services_lib
+android.library.reference.2=libs/pull-to-refresh
 android.library.reference.3=libs/facebook
